[package]
name = "rule"
version = "0.1.0"
authors = ["tclh123 <tclh123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A rule engine written in python."
readme = "README.md"
license = "MIT"
repository = "https://github.com/tclh123/rule-rs"
# https://crates.io/category_slugs
categories = ["parsing"]
keywords = ["rule"]

[dependencies]
