[package]
name = "rule"
version = "0.1.4"
authors = ["tclh123 <tclh123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A rule engine written in rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/tclh123/rule-rs"
# https://crates.io/category_slugs
categories = ["parsing"]
keywords = ["rule"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.3.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
